--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="description" content="The Code Genie's Projects and Portfolio"/>
         <meta name="author" content="The Code Genie | Ryan Langston"/>
         <title>The Code Genie</title>
-        <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico"/>
+        <link rel="icon" type="image/x-icon" href="assets/img/cg.ico"/>
         
         <script src="https://use.fontawesome.com/releases/v5.15.4/js/all.js" crossorigin="anonymous"></script>
         
@@ -84,6 +84,7 @@
                         </div>
                         <div class="card" style="width:18rem">
                             <img class="card-img-top" src="assets/img/depottool.png" alt="Card Image Cap">
+                            <img class="card-img-top" src="assets/img/depottool2.png" alt="Card Image Cap">
                             <div class="card-body">
                                 <h5 class="card-title">The Depot Tool</h5>
                                 <p class="card-text">A browser tool which is used for allocations within Bus Depots</p>
