--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 <div class="resume-section-content">
                     <h2 class="mb-5">Portfolio</h2>
                     <div class="row">
-                        <div class="card" style="width:18rem">
+                        <div class="card" style="width:15rem">
                             <img class="card-img-top" src="assets/img/ryakbot.jpg" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title">Ryak Discord Bot</h5>
@@ -82,7 +82,7 @@
                             </ul>
                             <a href="https://github.com/ryanl1993/Rayk_Torn_Discord_Bot" class="social-icon"><i class="fab fa-github"></i></a>
                         </div>
-                        <div class="card" style="width:18rem">
+                        <div class="card" style="width:15rem">
                             <img class="card-img-top" src="assets/img/depottool.png" alt="Card Image Cap">
                             <img class="card-img-top" src="assets/img/depottool2.png" alt="Card Image Cap">
                             <div class="card-body">
@@ -98,6 +98,20 @@
                                 <li class="list-group-item">Live Chat Components</li>
                             </ul>
                             <a href="https://github.com/ryanl1993/" class="social-icon"><i class="fab fa-github"></i></a>
+                        </div>
+                        <div class="card" style="width:15rem">
+                            <img class="card-img-top" src="assets/img/iviweb.png" alt="...">
+                            <img class="card-img-top" src="assets/img/iviweb2.png" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">I-V-I Website</h5>
+                                <p class="card-text">An independant aftermarket locking solution specialist website</p>
+                            </div>
+                            <ul class="list-group list-group-flush">
+                                <li class="list-group-item">HTML, CSS, Javascript</li>
+                                <li class="list-group-item">PHP</li>
+                                <li class="list-group-item">JQuery</li>
+                            </ul>
+                            <a href="https://www.i-v-i.co.uk" class="social-icon"><i class="fas fa-link"></i></a>
                         </div>
                     </div>
                     <p></p>
@@ -202,7 +216,7 @@
                 </div>
             </section>
             <hr class="m-0" />
-            <section class="resume-section" id="awards">
+            <section class="resume-section" id="qualifications">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Qualifications</h2>
                     <ul class="fa-ul mb-0">
@@ -225,6 +239,37 @@
                     </ul>
                 </div>
             </section>
+            <hr class="m-0" />
+            <section class="resume-section" id="contact">
+                <div class="resume-section-content">
+                    <h2 class="mb-5">Contact Me</h2>
+                    <p>There are many ways in which you can make contact with myself.<br>Please either complete the form below or click on the relevant social icons and message me there.</p>
+                    
+
+                    
+                    <ul class="list-inline dev-icons">
+                        <li class="list-inline-item"><a href="mailto:thecodegenieuk@gmail.com">
+                            <i class="far fa-envelope"></i></a>
+                        </li>
+                        <li class="list-inline-item"><a href="https://www.youtube.com/channel/UCS3ppeqAsuflDWxsK4NlZKQ">
+                            <i class="fab fa-youtube"></i></a>
+                        </li>
+                        <li class="list-inline-item"><a href="#">
+                            <i class="fab fa-facebook"></i></a>
+                        </li>
+                        <li class="list-inline-item"><a href="https://www.linkedin.com/in/ryan-langston-211244113/">
+                            <i class="fab fa-linkedin"></i></a>
+                        </li>
+                        <li class="list-inline-item"><a href="#">
+                            <i class="fab fa-twitter"></i></a>
+                        </li>
+                        <li class="list-inline-item"><a href="#">
+                            <i class="fab fa-instagram"></i></a>
+                        </li>
+                    </ul>
+                </div>
+            </section>
+
         </div>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
         <script src="js/scripts.js"></script>
