--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                                 <li class="list-group-item">Variety of Database Tools</li>
                                 <li class="list-group-item">Live Chat Components</li>
                             </ul>
-                            <a href="https://github.com/ryanl1993/" class="social-icon"><i class="fab fa-github"></i></a>
+                            <a href="https://github.com/ryanl1993/The_Depot_Tool" class="social-icon"><i class="fab fa-github"></i></a>
                         </div>
                         <div class="card" style="width:15rem">
                             <img class="card-img-top" src="assets/img/iviweb.png" alt="...">
