--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                         <a class="social-icon" href="https://www.linkedin.com/in/ryan-langston-211244113/">
                             <i class="fab fa-linkedin"></i>
                         </a>
-                        <a class="social-icon" href="#">
+                        <a class="social-icon" href="https://codepen.io/ryanl1993">
                             <i class="fab fa-codepen"></i>
                         </a>
                     </div>
@@ -136,8 +136,8 @@
                                 <p class="card-text">A small selection of other projects which I have completed</p>
                             </div>
                             <ul class="list-group list-group-flush">
-                                <li class="list-group-item">Rock, Paper, Scissors <a href="https://github.com/ryanl1993/" class="social-icon"><i class="fab fa-github"></i></a></li>
-                                <li class="list-group-item">Simon Says Game <a href="https://github.com/ryanl1993/" class="social-icon"><i class="fab fa-github"></i></a></li>
+                                <li class="list-group-item">Rock, Paper, Scissors <a href="https://github.com/ryanl1993/Rock_Paper_Scissors_Project" class="social-icon"><i class="fab fa-github"></i></a> <a href="https://codepen.io/ryanl1993/pen/MWENjQW" class="social-icon"><i class="fab fa-codepen"></i></li>
+                                <li class="list-group-item">Simon Says Game <a href="https://github.com/ryanl1993/Simon-Says-Game" class="social-icon"><i class="fab fa-github"></i></a> <a href="https://codepen.io/ryanl1993/pen/xxXvRwP" class="social-icon"><i class="fab fa-codepen"></i></li>
                                 <li class="list-group-item">Quiz App <a href="https://github.com/ryanl1993/" class="social-icon"><i class="fab fa-github"></i></a></li>
                                 <li class="list-group-item">Countdown Timer <a href="https://github.com/ryanl1993/" class="social-icon"><i class="fab fa-github"></i></a></li>
                             </ul>
@@ -188,6 +188,10 @@
                             <span class="fa-li"><i class="fas fa-check"></i></span>
                             Discord Bots / Chat Bots / Whatsapp Bots
                         </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>
+                            REST API / POST API
+                        </li>
                     </ul>
                     <p></p>
                     <div class="subheading mb-3">Tools</div>
@@ -195,6 +199,10 @@
                         <li>
                             <span class="fa-li"><i class="fas fa-window-maximize"></i></span>
                             Visual Studio Code - Codepen.io - Github
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-window-maximize"></i></span>
+                            Replit - Font Awesome - Boostrap Templates - Wordpress Templates
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-window-maximize"></i></span>
@@ -223,6 +231,10 @@
                         <li>
                             <span class="fa-li"><i class="fas fa-award text-warning"></i></span>
                             Bootcamp Introductory into Data Analyists
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-award text-warning"></i></span>
+                            Full Stack Web Development Bootcamp - Linkedin Learning
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-award text-warning"></i></span>
