--- a/index.html
+++ b/index.html
@@ -22,16 +22,31 @@
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
+                
                 <ul class="navbar-nav">
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#portfolio">Portfolio</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Interests</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#qualifications">Qualifications</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#contact">Contact</a></li>
+                    <li class="nav-item">
+                        <a class="nav-link js-scroll-trigger" href="#about">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link js-scroll-trigger" href="#portfolio">Portfolio</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link js-scroll-trigger" href="#skills">Skills</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link js-scroll-trigger" href="#interests">Interests</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link js-scroll-trigger" href="#qualifications">Qualifications</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
+                    </li>
                 </ul>
+
             </div>
         </nav>
+        
         <div class="container-fluid p-0">
             <section class="resume-section" id="about">
                 <div class="resume-section-content">
@@ -44,8 +59,8 @@
                         <a href="mailto:thecodegenieuk@gmail.com">thecodegenieuk@gmail.com</a> · 
                         <a href="https://www.thecodegenie.co.uk">www.thecodegenie.co.uk</a> ·
                     </div>
-                    <p class="lead mb-5">I am a young individual who loves to learn a variety of programming languages.</p>
-                        I orginally started off by creating a small community Discord Bot back in 2019, from there my passion for coding has grown.<br>I have managed to learn the full fundamentals of HTML, CSS and Javascript, all whilst working alongside my full time job.<p></p>
+                    <p class="lead mb-5">I am a young entrepreneur who loves to learn a variety of programming languages.</p>
+                        I orginally started off by creating a small community Discord Bot back in 2019, from there my passion for coding has grown.<br>I have managed to learn the full fundamentals of HTML, CSS and Javascript, all whilst working alongside my full time job.<p> My ultimate future goals are to expand on my skills, network and design style; I want to be able to share my work and teach people fundamentals of programming and how it can make it easy for newcomers into the industry.</p>
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.youtube.com/channel/UCS3ppeqAsuflDWxsK4NlZKQ">
                             <i class="fab fa-youtube"></i>
