--- a/index.html
+++ b/index.html
@@ -59,8 +59,7 @@
                         <a href="mailto:thecodegenieuk@gmail.com">thecodegenieuk@gmail.com</a> · 
                         <a href="https://www.thecodegenie.co.uk">www.thecodegenie.co.uk</a> ·
                     </div>
-                    <p class="lead mb-5">I am a young entrepreneur who loves to learn a variety of programming languages.</p>
-                        I orginally started off by creating a small community Discord Bot back in 2019, from there my passion for coding has grown.<br>I have managed to learn the full fundamentals of HTML, CSS and Javascript, all whilst working alongside my full time job.<p> My ultimate future goals are to expand on my skills, network and design style; I want to be able to share my work and teach people fundamentals of programming and how it can make it easy for newcomers into the industry.</p>
+                    <p class="lead mb-5">I am a young entrepreneur who loves to learn a variety of programming languages.</p> I orginally started off by creating a small community Discord Bot back in 2019, from there my passion for coding has grown. I have managed to learn the full fundamentals of HTML, CSS and Javascript, all whilst working alongside my full time job.<p></p>My ultimate future goals are to expand on my skills, network and design style; I want to be able to share my work and teach people fundamentals of programming and how it can make it easy for newcomers into the industry.</p>
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.youtube.com/channel/UCS3ppeqAsuflDWxsK4NlZKQ">
                             <i class="fab fa-youtube"></i>
