contact-section-update

--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
             <section class="resume-section" id="contact">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Contact Me</h2>
-                    <p>There are many ways in which you can make contact with myself.<br>Please either complete the form below or click on the relevant social icons and message me there.</p>
+                    <p>There are many ways in which you can make contact with myself.<br>Please click on the relevant social icons and message me there.</p>
                     
 
                     
@@ -280,18 +280,18 @@
                         <li class="list-inline-item"><a href="https://www.youtube.com/channel/UCS3ppeqAsuflDWxsK4NlZKQ">
                             <i class="fab fa-youtube"></i></a>
                         </li>
-                        <li class="list-inline-item"><a href="#">
+                        <li class="list-inline-item"><a href="https://www.facebook.com/ryan.egglang/5">
                             <i class="fab fa-facebook"></i></a>
                         </li>
                         <li class="list-inline-item"><a href="https://www.linkedin.com/in/ryan-langston-211244113/">
                             <i class="fab fa-linkedin"></i></a>
                         </li>
-                        <li class="list-inline-item"><a href="#">
+                        <li class="list-inline-item"><a href="https://twitter.com/codegenieuk">
                             <i class="fab fa-twitter"></i></a>
                         </li>
-                        <li class="list-inline-item"><a href="#">
+                        <!-- <li class="list-inline-item"><a href="#">
                             <i class="fab fa-instagram"></i></a>
-                        </li>
+                        </li> -->
                     </ul>
                 </div>
             </section>
