--- a/index.html
+++ b/index.html
@@ -93,14 +93,15 @@
                             <img class="card-img-top" src="assets/img/ryakbot.jpg" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title">Ryak Discord Bot</h5>
-                                <p class="card-text">A Community Discord Bot which was designed for the Online Game TORN.</p>
+                                <p class="card-text">A Community Discord Bot which was designed for the Online Game TORN. <p> This bot is used in a small number of servers to assist with their requirements and activities.
                             </div>
                             <ul class="list-group list-group-flush">
                                 <li class="list-group-item">Javascript Bot</li>
                                 <li class="list-group-item">MongoDB Usage</li>
                                 <li class="list-group-item">JQuery</li>
-                                <li class="list-group-item">API Calls</li>
+                                <li class="list-group-item">API Integration</li>
                                 <li class="list-group-item">Chat Bot</li>
+                                <li class="list-group-item">Monitoring Server Activity</li>
                             </ul>
                             <a href="https://github.com/ryanl1993/Rayk_Torn_Discord_Bot" class="social-icon"><i class="fab fa-github"></i></a>
                         </div>
@@ -109,7 +110,7 @@
                             <img class="card-img-top" src="assets/img/depottool2.png" alt="Card Image Cap">
                             <div class="card-body">
                                 <h5 class="card-title">The Depot Tool</h5>
-                                <p class="card-text">A browser tool which is used for allocations within Bus Depots</p>
+                                <p class="card-text">A browser tool which is used for allocations within Bus Depots</p><p>This is currently a work in progress, however the end result will enable a fast and easy solution to the already existing format. <p> This will eventually lead into something involving driver sign on.  </p>
                             </div>
                             <ul class="list-group list-group-flush">
                                 <li class="list-group-item">HTML, CSS, Javascript</li>
@@ -126,18 +127,21 @@
                             <img class="card-img-top" src="assets/img/iviweb2.png" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title">I-V-I Website</h5>
-                                <p class="card-text">An independant aftermarket locking solution specialist website</p>
+                                <p class="card-text">An independant aftermarket locking solution specialist website</p><p>Using some Wordpress within unique coding, I managed to pull together this site in a weekend.</p>
                             </div>
                             <ul class="list-group list-group-flush">
                                 <li class="list-group-item">HTML, CSS, Javascript</li>
                                 <li class="list-group-item">PHP</li>
                                 <li class="list-group-item">JQuery</li>
+                                <li class="list-group-item">Analytics</li>
+                                <li class="list-group-item">Wordpress Usage</li>
+                                <li class="list-group-item">Bootstrap/li>
                             </ul>
                             <a href="https://www.i-v-i.co.uk" class="social-icon"><i class="fas fa-link"></i></a>
                         </div>
                     </div>
                     <p></p>
-                    <div class="row">
+                    <!-- <div class="row">
                         <div class="card" style="width:18rem">
                             <img class="card-img-top" src="assets/img/js-tech-doc.png" alt="Card Image Cap">
                             <div class="card-body">
@@ -164,7 +168,7 @@
                                 <li class="list-group-item">Countdown Timer <a href="https://github.com/ryanl1993/" class="social-icon"><i class="fab fa-github"></i></a></li>
                             </ul>
                             <a href="https://github.com/ryanl1993/" class="social-icon"><i class="fab fa-github"></i></a>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
             </section>
@@ -212,7 +216,7 @@
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
-                            REST API / POST API
+                            PUT API / POST API
                         </li>
                     </ul>
                     <p></p>
@@ -250,6 +254,10 @@
                 <div class="resume-section-content">
                     <h2 class="mb-5">Qualifications</h2>
                     <ul class="fa-ul mb-0">
+                        <li>
+                            <span class="fa-li"><i class="fas fa-award text-warning"></i></span>
+                            Currently Studying <br> BSc (Honors) in Computing & IT and Business
+                        </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-award text-warning"></i></span>
                             Bootcamp Introductory into Data Analyists
@@ -297,9 +305,6 @@
                         <li class="list-inline-item"><a href="https://twitter.com/codegenieuk">
                             <i class="fab fa-twitter"></i></a>
                         </li>
-                        <!-- <li class="list-inline-item"><a href="#">
-                            <i class="fab fa-instagram"></i></a>
-                        </li> -->
                     </ul>
                 </div>
             </section>
