--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <meta name="description" content="The Code Genie's Projects and Portfolio"/>
+        <meta name="description" content="Ryan Langston's Personal Programming Portfolio"/>
         <meta name="author" content="The Code Genie | Ryan Langston"/>
         <title>The Code Genie</title>
         <link rel="icon" type="image/x-icon" href="assets/img/cg.ico"/>
